<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="TcoUrRoboticsT2OJoints" Id="{fd379598-8f09-0e71-2c5f-5e86a3786e48}">
    <Declaration><![CDATA[TYPE TcoUrRoboticsT2OJoints : 
STRUCT
    {attribute addProperty Name "<#Joint position [rad]#>"}
    JointPosition : ARRAY[0..5] OF REAL;
    {attribute addProperty Name "<#Joint velocity [rad/s]#>"}
    JointVelocity : ARRAY[0..5] OF REAL;
    {attribute addProperty Name "<#Joint current [A]#>"}
    JointCurrent : ARRAY[0..5] OF REAL;
    {attribute addProperty Name "<#Joint temperature [°C]#>"}
    JointTemperature : ARRAY[0..5] OF REAL;
    {attribute addProperty Name "<#Joint mode#>"}
    JointMode : ARRAY[0..5] OF USINT;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>